feat: add user profile page with personal info, security, and privacy settings
- Implemented a new profile page (perfil.html) with user information, security settings, and privacy options.
- Added functionality for updating personal information and changing passwords using Alpine.js for reactivity.
- Included a danger zone for account deletion with confirmation prompts.
- Enhanced user experience with loading states and error handling.

fix: improve controller validation and TypeScript error handling

- Created scripts to fix duplicate Array.isArray validations in controller files.
- Added necessary validations for request parameters (id and placa) to prevent invalid data submissions.
- Ensured compatibility with Prisma's _count feature by adding select clauses where missing.

chore: update database schema with new columns and foreign key constraints

- Added 'comissaoPaga' and 'fechamentoComissaoId' columns to 'ordens_servico_lavadores' table.
- Updated foreign key constraints for 'fechamentoComissaoId' to reference 'fechamentos_comissao' table.

fix: resolve issues with datalist in transaction modal

- Refactored the datalist implementation to use vanilla JavaScript for dynamic updates based on transaction category.
- Improved user experience by ensuring the correct list of responsible parties is displayed based on the selected category.
- Added logging for better debugging and tracking of data updates.

--- a/DESKTOPV2/admin/dashboard.html
+++ b/DESKTOPV2/admin/dashboard.html
@@ -466,10 +466,11 @@
             <!-- Loading Skeleton -->
             <template x-if="isLoading">
                 <div>
-                    <div class="skeleton skeleton-text" x-for="i in 5"></div>
+                    <template x-for="i in 5">
+                        <div class="skeleton skeleton-text"></div>
+                    </template>
                 </div>
             </template>
-
             <!-- Companies Table -->
             <template x-if="!isLoading && filteredCompanies.length > 0">
                 <table>
@@ -490,10 +491,9 @@
                                 <td>
                                     <strong x-text="empresa.nome"></strong><br>
                                     <small style="color: #94A3B8;" x-text="empresa.cnpj || 'Sem CNPJ'"></small>
-                                </td>
                                 <td>
-                                    <span x-text="empresa.usuario.nome"></span><br>
-                                    <small style="color: #94A3B8;" x-text="empresa.usuario.email"></small>
+                                    <span x-text="empresa.usuario?.nome || 'N/A'"></span><br>
+                                    <small style="color: #94A3B8;" x-text="empresa.usuario?.email || 'N/A'"></small>
                                 </td>
                                 <td>
                                     <span
@@ -504,9 +504,9 @@
                                         <span x-text="empresa.ativo ? 'Ativa' : 'Inativa'"></span>
                                     </span>
                                 </td>
-                                <td x-text="empresa._count.clientes">0</td>
-                                <td x-text="empresa._count.ordens">0</td>
-                                <td x-text="formatCurrency(empresa.faturamento)">R$ 0,00</td>
+                                <td x-text="empresa._count?.clientes ?? 0">0</td>
+                                <td x-text="empresa._count?.ordens ?? 0">0</td>
+                                <td x-text="formatCurrency(empresa.faturamento)">R$ 0,00</td>                                <td x-text="formatCurrency(empresa.faturamento)">R$ 0,00</td>
                                 <td>
                                     <div style="display: flex; gap: 0.5rem;">
                                         <button
@@ -572,11 +572,10 @@
                     const query = this.searchQuery.toLowerCase();
                     return this.companies.filter(empresa =>
                         empresa.nome.toLowerCase().includes(query) ||
-                        empresa.usuario.nome.toLowerCase().includes(query) ||
-                        empresa.usuario.email.toLowerCase().includes(query)
+                        empresa.usuario?.nome?.toLowerCase()?.includes(query) ||
+                        empresa.usuario?.email?.toLowerCase()?.includes(query)
                     );
                 },
-
                 /**
                  * Initialize dashboard
                  */
@@ -671,7 +670,7 @@
                  */
                 logout() {
                     if (confirm('Tem certeza que deseja sair?')) {
-                        localStorage.clear();
+                        localStorage.clear();                        
                         window.location.href = '../login.html';
                     }
                 },
