--- a/DESKTOPV2/clientes.html
+++ b/DESKTOPV2/clientes.html
@@ -682,7 +682,7 @@
                         // CRITICAL: Search in vehicle plates (nested)
                         if (client.veiculos && client.veiculos.length > 0) {
                             return client.veiculos.some(vehicle =>
-                                vehicle.placa.toLowerCase().includes(query)
+                                vehicle.placa?.toLowerCase()?.includes(query) ?? false
                             );
                         }
 
@@ -872,6 +872,7 @@
             }));
         });
     </script>
+    <script src="nav-menu-helper.js"></script>
 </body>
 </html>
 
