--- a/DESKTOPV2/configuracoes.html
+++ b/DESKTOPV2/configuracoes.html
@@ -2198,6 +2198,7 @@
             window.api.logout();
         }
     </script>
+    <script src="nav-menu-helper.js"></script>
 </body>
 </html>
 
