--- a/DESKTOPV2/funcionarios.html
+++ b/DESKTOPV2/funcionarios.html
@@ -173,6 +173,38 @@
         </div>
     </div>
 
+    <!-- Modal de Duração do Token -->
+    <div id="tokenDurationModal" class="modal-overlay">
+        <div class="modal-content" style="max-width: 450px;">
+            <div class="modal-header">
+                <h2 class="modal-title">Gerar Link de Acesso</h2>
+                <button onclick="closeModal('tokenDurationModal')" class="modal-close">&times;</button>
+            </div>
+            <p class="text-secondary mb-4">Escolha por quanto tempo o link ficará válido:</p>
+
+            <div class="form-group">
+                <label class="form-label">Validade do Link</label>
+                <select id="tokenDuration" class="form-input">
+                    <option value="6">6 horas</option>
+                    <option value="12">12 horas</option>
+                    <option value="24" selected>24 horas (1 dia)</option>
+                    <option value="48">48 horas (2 dias)</option>
+                    <option value="168">168 horas (1 semana)</option>
+                    <option value="permanent">🔓 Link Permanente</option>
+                </select>
+                <small class="text-secondary" style="display: block; margin-top: 8px;">
+                    ⚠️ Links permanentes nunca expiram. Use com cuidado.
+                </small>
+            </div>
+
+            <div class="modal-actions">
+                <button onclick="closeModal('tokenDurationModal')" class="btn btn-secondary">Cancelar</button>
+                <button id="confirmGenerateToken" class="btn btn-primary">
+                    <i class="fas fa-link"></i> Gerar Link
+                </button>
+            </div>
+        </div>
+    </div>
 
     <script src="api.js"></script>
     <script src="utils.js"></script>
@@ -349,24 +381,40 @@
             });
         }
 
-        async function generateAndCopyToken(lavadorId, button) {
-            setButtonLoadingState(button, true);
-            try {
-                const response = await window.api.gerarTokenLavador(lavadorId);
-                const token = response.token;
-                const link = `${window.location.origin}/lavador-publico.html?token=${token}`;
-                
-                navigator.clipboard.writeText(link).then(() => {
-                    showToast('Link de acesso copiado!', 'success');
-                }, (err) => {
-                    console.error('Erro ao copiar link: ', err);
-                    showToast('Falha ao copiar o link.', 'error');
-                });
-            } catch (error) {
-                showToast('Erro ao gerar o link de acesso.', 'error');
-            } finally {
-                setButtonLoadingState(button, false);
-            }
+        function generateAndCopyToken(lavadorId, button) {
+            // Abrir modal para escolher duração
+            openModal('tokenDurationModal');
+
+            // Configurar botão de confirmação
+            const confirmBtn = document.getElementById('confirmGenerateToken');
+            confirmBtn.onclick = async () => {
+                const duration = document.getElementById('tokenDuration').value;
+                closeModal('tokenDurationModal');
+
+                setButtonLoadingState(button, true);
+                try {
+                    const response = await window.api.gerarTokenLavador(lavadorId, duration);
+                    const token = response.token;
+                    const link = `${window.location.origin}/lavador-publico.html?token=${token}`;
+
+                    await navigator.clipboard.writeText(link);
+
+                    // Mostrar informação sobre expiração
+                    let expiraMsg = '';
+                    if (duration === 'permanent') {
+                        expiraMsg = ' (Link permanente - nunca expira)';
+                    } else {
+                        expiraMsg = ` (Válido por ${duration}h)`;
+                    }
+
+                    showToast('Link de acesso copiado!' + expiraMsg, 'success');
+                } catch (error) {
+                    console.error('Erro ao gerar token:', error);
+                    showToast('Erro ao gerar o link de acesso.', 'error');
+                } finally {
+                    setButtonLoadingState(button, false);
+                }
+            };
         }
 
         function openModal(modalId) {
@@ -383,6 +431,7 @@
             }
         }
     </script>
+    <script src="nav-menu-helper.js"></script>
 </body>
 </html>
 
